Initial commit: OpenSIP Voice API with PSTN calling support
- Added Node.js API server with Express
- Integrated Google Text-to-Speech API
- Added OpenSIPS configuration for PSTN calls
- Implemented API key authentication
- Added Docker deployment setup
- Created comprehensive documentation
- Added call management and tracking
- Support for MP3/WAV audio formats
- Enterprise-ready production configuration

--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "OpenSIP API with Google TTS integration",
   "main": "src/app.js",
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
+  },
   "scripts": {
     "start": "node src/app.js",
     "dev": "nodemon src/app.js",
